--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,26 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
 
 ul {
   width: 100%;
@@ -33,19 +16,24 @@ ul {
 }
 
 ul li {
+  min-width: 180px;
   padding: 25px;
-  background: #de6135;
-  color: #fff;
-  border-top: solid 1px #ff7849;
+  background: white;
+  color: black;
+  border-top: solid 1px #20939940;
   cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
 }
 
 ul li:hover {
-  background: #c8512f;
+  background: rgba(32,147,153, 0.2);
 }
 
 .menu-title{
   font-size: 25px;
+  font-family: 'Montserrat', sans-serif;
+  color: black;
+
 }
 
 .menu {
@@ -57,8 +45,8 @@ ul li:hover {
   -webkit-box-shadow: 10px 10px 115px -31px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 10px 115px -31px rgba(0,0,0,0.75);
   box-shadow: 10px 10px 115px -31px rgba(0,0,0,0.75);
-  color: white;
-  background: #c8512f;
+  background: white;
+  color: black;
   right: 20px;
   margin-top: 50px;
   position: absolute;
@@ -70,30 +58,64 @@ ul li:hover {
 }
 
 .trip_details {
-    position: absolute;
-    z-index: 2;
-    color: white;
-    max-width: 200px;
-    width: 100%;
-    max-height: 400px;
-    overflow-y: auto;
-    background: rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 10px 10px 115px -31px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 115px -31px rgba(0,0,0,0.75);
+  box-shadow: 10px 10px 115px -31px rgba(0,0,0,0.75);
+  margin-left: 20px;
+  margin-top: 30px;
+  position: absolute;
+  z-index: 2;
+  color: white;
+  max-width: 200px;
+  width: 100%;
+  max-height: 400px;
+  overflow-y: auto;
+  background: white;
+  color: black;
 }
 
 .trip_wrap {
   cursor: pointer;
 }
 
-.trip_wrap:hover {
-  background: rgba(0, 0, 0, 0.6);
-}
-
 .trip_p {
+  padding: 5px;
   margin: 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.inner_wrap {
+p.trip_p.trip_title {
+  float: left;
+  color: black;
+  font-weight: bold;
   padding: 10px;
-  padding-top: 15px;
-  padding-bottom: 15px;
 }
+
+.wrap_title {
+  background: #20939940;
+  width: 100%;
+  float: left;
+  margin-bottom: 5px;
+}
+
+button.remove {
+  border-radius: 50px;
+  float: right;
+  margin-top: 5px;
+  margin-right: 5px;
+  border: none;
+  font-family: 'Montserrat', sans-serif;
+  cursor: pointer;
+}
+
+button.remove:hover {
+  background: #20939940;
+  color: white;
+}
+
+
+
+
+
+
+
